deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tekton-pipeline
  name:  tekton-pipeline-route
spec:
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: tekton-pipeline-service
    weight: 100
  wildcardPolicy: None
